--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -98,7 +98,7 @@
 
                     <div class="row">
                         <button ng-click="showOverlay = false" class="close-button fx-fade-down"><img
-                                src="client/assets/images/cross97.png"
+                                src="assets/images/cross97.png"
                                 alt=""/></button>
                     </div>
 
