--- a/client/app/about/about.html
+++ b/client/app/about/about.html
@@ -1,3 +1,50 @@
 <div class="container">
-    <h3 class="portfolio-heading">ABOUT</h3>
+    <div class="row">
+        <h5 class="portfolio-heading">ABOUT</h5>
+    </div>
+    <div class="row">
+        <img class="col-lg-2 col-lg-offset-5 col-md-2 col-md-offset-5 col-sm-4 col-sm-offset-4 col-xs-6 col-xs-offset-3 img-responsive img-circle"
+             src="assets/images/PranuSarna.jpg" alt=""/>
+    </div>
+    <div class="row">
+        <h4 class="col-lg-8 col-lg-offset-2 upper-about">My name is <strong><i>Pranu</i></strong> and I like to identify
+            problems people around me face and use technology to craft well designed solutions for them.</h4>
+    </div>
+    <div class="row">
+        <h4 class="upper-about"><i><strong>That is a fancy way of saying, I am a UX designer and a Javascript
+            Developer</strong></i></h4>
+    </div>
+    <div class="row" style="height: 20px"></div>
+
+    <div class="row">
+        <h4 class="upper-about">You can now check out my:</h4>
+    </div>
+    <div class="row" style="height: 20px"></div>
+    <div class="row">
+        <button ui-sref="work" class="col-lg-4 col-lg-offset-4 col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 col-xs-8 col-xs-offset-2 main-button-about">
+            PORTFOLIO
+        </button>
+    </div>
+    <div class="row" style="height: 20px"></div>
+
+    <div class="row">
+        <h4 class="upper-about">Or find me here:</h4>
+    </div>
+    <div class="row" style="height: 20px"></div>
+
+    <div class="row">
+        <a href="https://github.com/Psarna94" class="col-lg-2 col-lg-offset-2 col-md-2 col-md-offset-2 col-sm-2 col-sm-offset-2 col-xs-10 col-xs-offset-1"><img
+                class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-4 col-xs-offset-4"
+                src="assets/images/social network363.png" alt=""/></a>
+        <a href="https://twitter.com/sarna_pranu" class="col-lg-2 col-lg-offset-0 col-md-2 col-md-offset-0 col-sm-2 col-sm-offset-0 col-xs-10 col-xs-offset-1"><img
+                class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-4 col-xs-offset-4"
+                src="assets/images/logo22.png" alt=""/></a>
+        <a href="https://www.linkedin.com/in/pranu-sarna-2679532a?trk=nav_responsive_tab_profile_pic" class="col-lg-2 col-lg-offset-0 col-md-2 col-md-offset-0  col-sm-2 col-sm-offset-0  col-xs-10 col-xs-offset-1"><img
+                class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-4 col-xs-offset-4"
+                src="assets/images/linkedin1.png" alt=""/></a>
+        <a href="https://www.instagram.com/pranusarna/" class="col-lg-2 col-lg-offset-0 col-md-2 col-md-offset-0  col-sm-2  col-sm-offset-0 col-xs-10 col-xs-offset-1"><img
+                class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-4 col-xs-offset-4"
+                src="assets/images/instagram19.png" alt=""/></a>
+    </div>
+
 </div>
