--- a/client/app/about/about.html
+++ b/client/app/about/about.html
@@ -59,7 +59,7 @@
 
     <div class="row">
         <img class="col-lg-2 col-lg-offset-5 col-md-2 col-md-offset-5 col-sm-4 col-sm-offset-4 col-xs-6 col-xs-offset-3 img-responsive img-circle"
-             src="assets/images/Musk.png" alt=""/>
+             src="assets/images/musk.png" alt=""/>
     </div>
     <div class="row">
         <h5 class="col-lg-6 col-lg-offset-3 quote"><i>"I think it's very important to have a feedback loop, where you're
