--- a/client/app/work/work.html
+++ b/client/app/work/work.html
@@ -16,8 +16,8 @@
         </div>
         <div class="row">
             <a href="https://medium.com/@pranusarna/designing-an-organic-network-for-tutors-students-and-parents-7b8f09ba8d31#.3hv11jhlx">
-                <p class="case-desc col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10">
-                    How I designed an organic network for private tutors, students and parents</p>
+                <h4 class="case-desc col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10">
+                    How I designed an organic network for private tutors, students and parents</h4>
             </a>
         </div>
 
@@ -39,11 +39,11 @@
 
         </div>
         <div class="row">
-            <p class="case-desc col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10">
+            <h4 class="case-desc col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10">
                 How I spent the summer of 2015, interning for a company which is building not just a MOOC platform.
 
 
-            </p>
+            </h4>
         </div>
 
         <div style="height: 70px;" class="row">
@@ -64,11 +64,11 @@
 
         </div>
         <div class="row">
-            <p class="case-desc col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10">
+            <h4 class="case-desc col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10">
                 How I designed a team collaboration tool for small enterprises.
 
 
-            </p>
+            </h4>
         </div>
 
         <div style="height: 70px;" class="row">
