updated for roposo

--- a/client/app/work/work.html
+++ b/client/app/work/work.html
@@ -1,88 +1,136 @@
 <div ui-view="workView" class="anim-in-out anim-fade" data-anim-speed="1000">
-    <h3 class="portfolio-heading">PORTFOLIO</h3>
+  <h3 class="portfolio-heading">PORTFOLIO</h3>
 
-    <div class="container">
-        <div class="row">
-            <div class=" col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10 image case-study">
-                <a href="https://medium.com/@pranusarna/designing-an-organic-network-for-tutors-students-and-parents-7b8f09ba8d31#.3hv11jhlx"><img
-                        class="img-responsive img" src="assets/images/Home-tuition.png" alt=""/></a>
-            </div>
-        </div>
-        <div class="row">
-            <a href="https://medium.com/@pranusarna/designing-an-organic-network-for-tutors-students-and-parents-7b8f09ba8d31#.3hv11jhlx">
-                <h2 class="case-heading col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10">
-                    Tyutor</h2>
-            </a>
-        </div>
-        <div class="row">
-            <a href="https://medium.com/@pranusarna/designing-an-organic-network-for-tutors-students-and-parents-7b8f09ba8d31#.3hv11jhlx">
-                <h4 class="case-desc col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10">
-                    How I designed an organic network for private tutors, students and parents</h4>
-            </a>
-        </div>
+  <div class="container">
 
-        <div style="height: 70px;" class="row">
-
-        </div>
-
-        <div class="row">
-            <div class=" col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10 image case-study">
-                <img class="img-responsive img" src="assets/images/Pyoopil-banner.png" alt=""/>
-            </div>
-        </div>
-        <div class="row">
-
-            <h2 class="case-heading col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10">
-                Pyoopil
-                <small>Case study coming soon</small>
-            </h2>
-
-        </div>
-        <div class="row">
-            <h4 class="case-desc col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10">
-                How I spent the summer of 2015, interning for a company which is building not just a MOOC platform.
-
-
-            </h4>
-        </div>
-
-        <div style="height: 70px;" class="row">
-
-        </div>
-
-        <div class="row">
-            <div class=" col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10 image case-study">
-                <img class="img-responsive img" src="assets/images/Ez-biz-banner.png" alt=""/>
-            </div>
-        </div>
-        <div class="row">
-
-            <h2 class="case-heading col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10">
-                EzBiz
-                <small>Case study coming soon</small>
-            </h2>
-
-        </div>
-        <div class="row">
-            <h4 class="case-desc col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10">
-                How I designed a team collaboration tool for small enterprises.
-
-
-            </h4>
-        </div>
-
-        <div style="height: 70px;" class="row">
-
-        </div>
-
-        <div class="row">
-            <button ui-sref="main"
-                    class="col-lg-offset-4 col-lg-4 col-md-offset-4 col-md-4 col-sm-offset-3 col-sm-6 col-xs-offset-3 col-xs-6 home">
-                HOME
-            </button>
-        </div>
-        <div style="height: 70px;" class="row">
-
-        </div>
+    <div class="row">
+      <div
+        class=" col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10 image case-study">
+        <div
+          href="https://medium.com/@pranusarna/designing-an-organic-network-for-tutors-students-and-parents-7b8f09ba8d31#.3hv11jhlx"><img
+          class="img-responsive img" src="assets/images/Roposo.png" alt=""/></div>
+      </div>
     </div>
+    <div class="row">
+      <div
+        href="https://medium.com/@pranusarna/designing-an-organic-network-for-tutors-students-and-parents-7b8f09ba8d31#.3hv11jhlx">
+        <h2
+          class="case-heading col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10">
+          Roposo
+          <small>Case study coming soon</small>
+        </h2>
+
+      </div>
+    </div>
+    <div class="row">
+      <div
+        href="https://medium.com/@pranusarna/designing-an-organic-network-for-tutors-students-and-parents-7b8f09ba8d31#.3hv11jhlx">
+        <h4
+          class="case-desc col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10">
+          How I spent my last semester of college, interning as a UX designer for India's first social network</h4>
+      </div>
+    </div>
+
+    <div style="height: 70px;" class="row">
+
+    </div>
+
+
+    <div class="row">
+      <div
+        class=" col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10 image case-study">
+        <a
+          href="https://medium.com/@pranusarna/designing-an-organic-network-for-tutors-students-and-parents-7b8f09ba8d31#.3hv11jhlx"><img
+          class="img-responsive img" src="assets/images/Home-tuition.png" alt=""/></a>
+      </div>
+    </div>
+    <div class="row">
+      <a
+        href="https://medium.com/@pranusarna/designing-an-organic-network-for-tutors-students-and-parents-7b8f09ba8d31#.3hv11jhlx">
+        <h2
+          class="case-heading col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10">
+          Tyutor</h2>
+      </a>
+    </div>
+    <div class="row">
+      <a
+        href="https://medium.com/@pranusarna/designing-an-organic-network-for-tutors-students-and-parents-7b8f09ba8d31#.3hv11jhlx">
+        <h4
+          class="case-desc col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10">
+          How I designed an organic network for private tutors, students and parents</h4>
+      </a>
+    </div>
+
+    <div style="height: 70px;" class="row">
+
+    </div>
+
+    <div class="row">
+      <div
+        class=" col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10 image case-study">
+        <img class="img-responsive img" src="assets/images/Ez-biz-banner.png" alt=""/>
+      </div>
+    </div>
+    <div class="row">
+
+      <h2
+        class="case-heading col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10">
+        EzBiz
+        <small>Case study coming soon</small>
+      </h2>
+
+    </div>
+    <div class="row">
+      <h4
+        class="case-desc col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10">
+        How I designed a team collaboration tool for small enterprises.
+
+
+      </h4>
+    </div>
+
+    <div style="height: 70px;" class="row">
+
+    </div>
+
+    <div class="row">
+      <div
+        class=" col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10 image case-study">
+        <img class="img-responsive img" src="assets/images/Pyoopil-banner.png" alt=""/>
+      </div>
+    </div>
+    <div class="row">
+
+      <h2
+        class="case-heading col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10">
+        Pyoopil
+        <small>Case study coming soon</small>
+      </h2>
+
+    </div>
+    <div class="row">
+      <h4
+        class="case-desc col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10">
+        How I spent the summer of 2015, interning for a company which is building not just a MOOC platform.
+
+
+      </h4>
+    </div>
+
+    <div style="height: 70px;" class="row">
+
+    </div>
+
+
+
+    <div class="row">
+      <button ui-sref="main"
+              class="col-lg-offset-4 col-lg-4 col-md-offset-4 col-md-4 col-sm-offset-3 col-sm-6 col-xs-offset-3 col-xs-6 home">
+        HOME
+      </button>
+    </div>
+    <div style="height: 70px;" class="row">
+
+    </div>
+  </div>
 </div>
