Changes in meta tag

--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <base href="/">
     <title>Pranu Sarna</title>
-    <meta name="description" content="width=device-width, initial-scale=1">
+    <meta name="description" content="I craft, human usable products in the digital sphere">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(client) app/vendor.css -->
