--- a/client/app/work/work.html
+++ b/client/app/work/work.html
@@ -6,21 +6,20 @@
     <div class="row">
       <div
         class=" col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10 image case-study">
-        <div
-          href="https://medium.com/@pranusarna/designing-an-organic-network-for-tutors-students-and-parents-7b8f09ba8d31#.3hv11jhlx"><img
-          class="img-responsive img" src="assets/images/Roposo.png" alt=""/></div>
+        <a
+          href="https://medium.com/@pranusarna/interning-as-a-ux-designer-at-roposo-77bc90f65d26#.1s5vjuaen"><img
+          class="img-responsive img" src="assets/images/Roposo.png" alt=""/></a>
       </div>
     </div>
     <div class="row">
-      <div
-        href="https://medium.com/@pranusarna/designing-an-organic-network-for-tutors-students-and-parents-7b8f09ba8d31#.3hv11jhlx">
+      <a
+        href="https://medium.com/@pranusarna/interning-as-a-ux-designer-at-roposo-77bc90f65d26#.1s5vjuaen">
         <h2
           class="case-heading col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10">
           Roposo
-          <small>Case study coming soon</small>
         </h2>
 
-      </div>
+      </a>
     </div>
     <div class="row">
       <div
